fix: following Claude AI PR-review - ExcelDocumentDetector fixed if-statement logic error (leftover from refactor) - ExcelDocumentDetector change arraylist to List.of - remove test/endpoint authorization.permitAll form SecurityConfig - FileValidationService useage of e.getMessage ln 156